k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-html       # harus match dengan nama volume di bawah
              mountPath: /usr/share/nginx/html   # folder default nginx untuk serve static file

      volumes:
        - name: nginx-html
          persistentVolumeClaim:
            claimName: nginx-html-pvc   # harus match nama PVC yang sudah kamu buat
