k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
spec:
  ingressClassName: nginx       # harus match dengan controller yang sudah di-install (ingress-nginx)
  rules:
    - host: nginx.local         # hostname yang dipakai untuk routing (bukan domain asli)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx      # nama Service yang sudah ada di k8s/service.yaml
                port:
                  number: 80
